@@ -1,5 +1,12 @@
 2014-05-17  Gavin Smith  <gavinsmith0123@gmail.com>
 
+	* info/window.c (info_tag)
+	* info/info-utils.c (printed_representation): do_tags argument
+	removed.
+	* info/tag.c (handle_tag): Removed.
+
+2014-05-17  Gavin Smith  <gavinsmith0123@gmail.com>
+
 	* info/window.c (process_node_text): Don't split printed
 	representations like "^X" across lines.
 
